# d2bot

./: .gitignore  Dockerfile.discord  Dockerfile.dota2lobby  LICENSE  README.md  pyproject.toml  requirements.txt
Discord/: helpers.py  heplers.py  main.py
config/: settings.py
dota2_lobby/: __init__.py  client.py  lobby.py
tests/: test_discord_helpers.py  test_discord_main.py
